--- a/cmu-safe-frontend/src/App.css
+++ b/cmu-safe-frontend/src/App.css
@@ -1,5 +1,6 @@
 .App {
   text-align: center;
+  margin: 10px ;
 }
 
 .App-logo {
@@ -21,11 +22,92 @@
   align-items: center;
   justify-content: center;
   font-size: calc(10px + 2vmin);
-  color: white;
+  color: black;
 }
 
 .App-link {
   color: #61dafb;
+}
+
+.content{
+  background-color: rgb(134, 202, 233);
+  padding: 2%;
+}
+
+.Form{
+  background-color: #ffffff; /* White background for the form */
+  padding: 5%;
+  border-radius: 8px; /* Rounded corners */
+  box-shadow: 0px 4px 15px rgba(0, 0, 0, 0.1); /* Soft shadow for depth */
+  width: 100%;
+  max-width: 400px; /* Responsive width */
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+input[type="text"], input[type="email"] {
+  width: 100%; /* Full width for the input fields */
+  padding: 10px 15px;
+  margin: 10px 0 20px 0; /* Space between inputs */
+  display: block;
+  border: 1px solid #b0bec5; /* Light border */
+  border-radius: 5px; /* Rounded corners */
+  font-size: 1rem; /* Readable font size */
+  color: #333;
+  background-color: #f1f9fc; /* Very light blue for input background */
+  transition: border-color 0.3s ease-in-out; /* Smooth border effect */
+}
+
+input[type="text"]:focus, input[type="email"]:focus {
+  border-color: #0288d1; /* Blue border on focus */
+  outline: none; /* Remove default outline */
+}
+
+label {
+  font-size: 1.1rem;
+  font-weight: 500;
+  color: #555; /* Dark gray for labels */
+  text-align: left;
+  display: block;
+  margin-bottom: 5px; /* Space between label and input */
+}
+
+input[type="submit"] {
+  width: 100%; /* Full width button */
+  padding: 12px;
+  background-color: #0288d1; /* Light blue */
+  color: white;
+  border: none;
+  border-radius: 5px;
+  font-size: 1rem;
+  font-weight: 600;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+}
+
+button[type="submit"]:hover {
+  background-color: #0277bd; /* Slightly darker blue on hover */
+}
+
+
+.Title{
+  font-size: 3rem; /* Large and bold */
+  font-weight: bold;
+  text-align: center;
+  color: #333; /* Darker shade for good contrast */
+  margin-top: 50px; /* Create space from top */
+  margin-bottom: 20px; /* Create space between title and subtitle */
+  letter-spacing: 1px; /* Slightly spaced letters for a modern look */
+}
+
+.Subtitle{
+  font-size: 1.5rem; /* Smaller than title, but still noticeable */
+  font-weight: 300; /* Lighter for contrast with the title */
+  text-align: center;
+  color: #555; /* Lighter color than title for visual hierarchy */
+  margin-bottom: 50px; /* Space between subtitle and next content */
+  line-height: 1.6; /* Good readability */
 }
 
 @keyframes App-logo-spin {
@@ -35,4 +117,13 @@
   to {
     transform: rotate(360deg);
   }
+}
+
+.Map{
+  flex-grow: 1; 
+  position: relative;
+  width: 70%;
+  margin-left: auto;
+  margin-right: auto;
+  content: center;
 }
