--- a/cmu-safe-frontend/src/App.css
+++ b/cmu-safe-frontend/src/App.css
@@ -44,6 +44,7 @@
   text-align: center;
   margin-left: auto;
   margin-right: auto;
+  margin-bottom: 50px;
 }
 
 input[type="text"], input[type="email"] {
